--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
   <title>Tamagotchi</title>
 </head>
 <body>
-  <h1>12314</h1>
-  <div id="app">
+  <div id="app" class="app">
     <div id="progress"></div>
     <div id="eat" class="quad"></div>
     <div id="play" class="quad"></div>
